testsuite/tests/typecheck/should_fail/T8306.hs
{-# LANGUAGE DataKinds #-}
{-# LANGUAGE NegativeLiterals #-}

type T = -1
